[package]
name = "rust-enrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3" 
petname = "1.1.3"
dotenv = "0.15" 
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
log = "0.4"
clap = { version = "4.4.8", features = ["derive"] }
pretty_env_logger = "0.5"
serde_json = "1.0"
